class diagram update

--- a/document/prac2.tex
+++ b/document/prac2.tex
@@ -93,7 +93,7 @@ Below you will find a Class diagram to show the structure of the application.
 \begin{figure}[htbp]\label{fig:class-diagram}
   \centering
   \includegraphics[width=0.9\textwidth]{class_diagram.png}
-  \caption{Class diagram of the Programming Learning App}
+  \caption{\small{Class diagram of the Programming Learning App}}
 \end{figure}
 %hier die toevoegen kwee nie hoe da moet
 We have used multiple patterns to structure our program. 
