--- a/document pt 3/prac3.tex
+++ b/document pt 3/prac3.tex
@@ -80,13 +80,18 @@
 %============================%
 %         TITLE INFO         %
 %============================%
-\title{\textbf{MSO Lab Assignment 3:\\
-Programming Learning App}}
+\title{\textbf{MSO \\ Loopa}}
 \author{Jan Huls (4699610), Arwin Moormans (4965957)}
 
 
 \begin{document} 
     \maketitle
-    \Section{Changes From Previous Design}
+    \begin{figure*}[htbp]
+        \centering
+        \includegraphics[width=0.9\textwidth]{mascot}
+        \label{image-mascot}
+    \end{figure*}
+    \newpage
+    \section{Changes From Previous Design}\label{sec:changes-from-previous-design}
     list van strings met de "printed" moves in character ipv ToString methode in ICommand
 \end{document}
