--- a/document pt 3/prac3.tex
+++ b/document pt 3/prac3.tex
@@ -102,5 +102,7 @@
     To fix this we added a list of executed commands to the character, and each basic command (Turn and Move) adds itself to this list.
     This way we can easily print the list in the \texttt{Character} class. 
     
-    
+    %begint altijd (0, 0)
+    %grid is altijd vierkant
+    %geen oneindige grids
 \end{document}
