woopsie vergeten te pushen

--- a/document pt 3/prac3.tex
+++ b/document pt 3/prac3.tex
@@ -105,4 +105,5 @@
     %begint altijd (0, 0)
     %grid is altijd vierkant
     %geen oneindige grids
+    %kan niet uit grid lopen??
 \end{document}
