fixed warnings and grid

--- a/document pt 3/prac3.tex
+++ b/document pt 3/prac3.tex
@@ -106,4 +106,6 @@
     %grid is altijd vierkant
     %geen oneindige grids
     %kan niet uit grid lopen??
+    
+    %resharper zit build-in bij rider en hebben we gebruikt om alle errors en warnings op te lossen
 \end{document}
